Fix index.html description to no longer mention hexadecimal

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 </head>
 
 <body>
-    <h1>Hexadecimal Password Generator</h1>
+    <h1>Password Generator</h1>
     <br>
-    <p>This simple page (pseudo) randomly generates a Hexadecimal password that is 20-digits long. Click the button to make a new one! And don't sue me if this not-cryptographically-secure service leads to you getting hacked plzthnx</p>
+    <p>This simple page (pseudo) randomly generates a password that is 20-digits long. Click the button to make a new one! And don't sue me if this not-cryptographically-secure service leads to you getting hacked plzthnx</p>
 
     <button id="passButton">Click me!</button>
     <br>
-    <h2>Your Password (copy and paste it):</h2>
+    <h2>Your Password (copy and paste it, glhf remembering that mess):</h2>
     <p type="password" id="passOutput"></p>
     
     <script src="main.js"> </script>
